<resources>
    <string name="app_name">Compartenos tu opinión</string>
    <string name="Usuario">Ingresa tu nombre</string>
    <string name="Contraseña">Ingresa tu contraseña</string>
    <string name="Boton">Ingresar</string>
    <string name="Bienvenida">Bienvenid@</string>
    <string name="logo">Logo</string>
    <string name="Ingreso"> Usuario Conectado: </string>
    <string name="nombre">Nombre </string>
    <string name="monto">Importe Cobrado</string>
    <string name="pago">Pago </string>
    <string name="total">Total a Pagar</string>
    <string name="llena">Por Favor Completa la Encuesta</string>
    <string name="couta">Couta </string>
    <string name="guardar">Guardar</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="Pregunta1">¿Por qué nos Eligío?</string>
    <string name="Pregunta2">¿Cómo se enteró de nosotros?</string>
    <string name="Pregunta3">¿Esta conforme con la solución brindada? </string>
    <string name="si">SI </string>
    <string name="no">NO </string>
    <string name="amigos">Por un amigo </string>
    <string name="facebook">Facebook</string>
    <string name="otro">Otro medio</string>
    <string name="enviar">Enviar Encuesta </string>
    <string name="registro">Resumen del Registro </string>
    <string name="apelldio">Apellido </string>
    <string name="direccion">Dirección </string>
    <string name="telefono">Celular o Teléfono </string>
    <string name="capturar">Tomar Foto</string>
    <string name="_0">0</string>
    <string name="btnRegistro">¿Aun no eres usuario?</string>
    <string name="correo">Correo electrónico</string>
    <string name="slogan">Bienvenid@ a LeoSystems </string>
    <string name="slogan2">Gracias por confiar en nosotros. </string>
    <string name="slogan3">¿Cómo podemos ayudarte?</string>
    <string name="btnencuesta">Calificanos</string>
    <string name="btnreservas">Asistencia</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="tipo">Tipo</string>
    <string name="tipoejm">Pc, Laptop, Impresora</string>
    <string name="descripcion">Descripción</string>
    <string name="titulo">Alerta</string>
    <string name="Mensaje">¿Deseas Salir?</string>
    <string name="Salir">Salir</string>
</resources>
