<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agenda">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="0dp"
                android:background="#2196F3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@mipmap/logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="331dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="#03A9F4"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="333dp"
                android:layout_height="380dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/modelo"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/modelo"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/marca"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/eTMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/marca"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/tipo"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/eTTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/tipoejm"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/descripcion"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/eTDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="277dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

                <Button
                    android:id="@+id/button3"
                    style="@android:style/Widget.Button"
                    android:layout_width="80dp"
                    android:layout_height="47dp"

                    android:onClick="Guardar"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/button4"
                    style="@android:style/Widget.Button"
                    android:layout_width="80dp"
                    android:layout_height="47dp"

                    android:text="@string/limpiar" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>