<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="0dp"
                android:background="#2196F3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@mipmap/logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="331dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:background="#03A9F4"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="333dp"
                android:layout_height="115dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/slogan"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/slogan2"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/slogan3"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="332dp"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

                <Button
                    android:id="@+id/button3"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:onClick="encuesta"
                    android:text="@string/btnencuesta" />

                <Button
                    android:id="@+id/button4"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:onClick="agendar"
                    android:text="@string/btnreservas" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="332dp"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

                <Button
                    android:id="@+id/btnSalir"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:onClick="Salir"
                    android:text="@string/Salir" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
