<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Encuesta">

    <ScrollView
        android:id="@+id/masterScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:clipToPadding="false"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="10dp"
                android:background="#2196F3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@mipmap/download" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="331dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                android:background="#03A9F4"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/Ingreso"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvBienvenido"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="333dp"
                android:layout_height="444dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/registro"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:background="#ED9898"
                    android:text="@string/nombre"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tVnombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/total"
                    android:background="#ED9898"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tVmonto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Pregunta1"
                    android:background="#ED9898"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvInfo"
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Pregunta2"
                    android:background="#ED9898"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tVdeportes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:background="#ED9898"
                    android:text="@string/Pregunta3"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tVidioma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="20sp" />


            </LinearLayout>




        </LinearLayout>

    </ScrollView>

</LinearLayout>