<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="0dp"
                android:background="#2196F3"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@mipmap/logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="331dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                android:background="#03A9F4"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/Ingreso"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvBienvenido"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="333dp"
                android:layout_height="413dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/nombre"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/eTNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/apelldio"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/eTApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/apelldio"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/direccion"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/eTDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/direccion"
                    android:inputType="textPersonName" />


                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/monto"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/eTMonto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="0"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

                <Button
                    android:id="@+id/button3"
                    style="@android:style/Widget.Button"
                    android:layout_width="80dp"
                    android:layout_height="47dp"
                    android:onClick="Guardar"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/button4"
                    style="@android:style/Widget.Button"
                    android:layout_width="80dp"
                    android:layout_height="47dp"
                    android:onClick="Limpiar"
                    android:text="@string/limpiar" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>